[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]

[tool.pyright]
typeCheckingMode = "off"
venv = ".venv"
venvPath = "."

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
